--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,9 +5,9 @@
 }
 
 .main {
-  /* width: 100vw;
+  width: 100%;
   min-height: 100vh;
-  height: auto; */
+  height: auto;
   padding: 4rem 0;
 }
 
