--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -9,6 +9,11 @@
   min-height: 100vh;
   height: auto;
   padding: 4rem 0;
+  background-image: url(/public/bg.webp);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+   
 }
 
 .svgsize{
@@ -95,7 +100,7 @@
 }
 
 .card {
-  background-color: #f8f8f8;
+  background-color: #effafbe8;
   text-align: left;
   color: inherit;
   text-decoration: none;
@@ -114,9 +119,23 @@
   display: block;
   width: 100%;
   height: auto;
-  border-radius: 4px 4px 0 0;
+  border-radius: 17px 23px 100px 100px;
   margin-bottom: 12px;
   border: none;
+}
+
+.header-text{
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.header-desc{
+    margin: 0;
+    font-size: 12px;
+    line-height: 1.75;
+    color: #056d2d;
 }
 
 .card:hover,
@@ -130,7 +149,7 @@
   margin: 0 0 0.75rem 0;
 }
 
-.card p {
+.p {
   margin: 0;
   font-size: 1rem;
   line-height: 1.75;
