--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,7 +44,7 @@ a {
   display: flex;
   flex-direction: column;
   border-radius: var(--rounded-box, 1rem);
-  margin-top: 54px;
+  margin-top: -9px;
 }
 
 .move{
@@ -67,4 +67,21 @@ a {
   box-shadow: 2px 4px 12px #00000014;
   width: 100%;
   margin: 0 auto;
+}
+
+
+.form-input {
+  border: 4px dashed #10b981; /* Dashed green border */
+  background-color: #f3f4f6; /* Light gray background */
+  padding: 12px;
+  border-radius: 0.375rem; /* Medium rounded corners */
+  transition: border-color 0.3s ease, background-color 0.3s ease; /* Smooth transition */
+  height: 49px;
+  width: 100%;
+}
+
+.form-input:focus {
+  background-color: #ffffff; /* Change background to white on focus */
+  border-color: #059669; /* Darker green on focus */
+  outline: none; /* Remove default focus outline */
 }
