--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 
+
 html,
 body {
   padding: 0;
@@ -13,6 +14,16 @@ body {
   font-family: "Ananias", sans-serif;
   color: #e7e8e8;
 
+}
+
+:where(.menu li) {
+  position: relative;
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @font-face {
@@ -84,4 +95,27 @@ a {
   background-color: #ffffff; /* Change background to white on focus */
   border-color: #059669; /* Darker green on focus */
   outline: none; /* Remove default focus outline */
+}
+
+.input {
+  flex-shrink: 1;
+  appearance: none;
+  height: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-size: 1rem;
+  line-height: 2;
+  line-height: 1.5rem;
+  border-radius: var(--rounded-btn, 0.5rem);
+  border-width: 1px;
+  border-color: #056d2d;
+  --tw-bg-opacity: 1;
+  background-color: oklch(0.52 0.18 142.49);
+  color: white;
+}
+
+.grid {
+  display: grid;
+  justify-content: space-around;
+  justify-items: center;
 }
